Methods on the way

--- a/lit.bib
+++ b/lit.bib
@@ -12,6 +12,8 @@
   year={2015}
 }
 
+
+
 @misc{earnshaw2013devops,
   title={Cloud computing patterns: identification, design, and application},
   author={Aliza Earnshaw},
@@ -19,8 +21,23 @@
   year={2013}
 }
 
+@inproceedings{pahl2015containers,
+  title={Containers and clusters for edge cloud architectures--a technology review},
+  author={Pahl, Claus and Lee, Brian},
+  booktitle={Future Internet of Things and Cloud (FiCloud), 2015 3rd International Conference on},
+  pages={379--386},
+  year={2015},
+  organization={IEEE}
+}
+
+@misc{wolf_ms,
+	title={Introduction into Microservices},
+	author={Oliver Wolf},
+	howpublished="\url{https://specify.io/concepts/microservices}",
+}
+
 @book{RTR3,
- author = {Tomas Akenine-M\"{o}ller and Eric Haines and Naty Hoffman},
+ author = {Tomas Akenine-Möller and Eric Haines and Naty Hoffman},
  title = {Real-Time Rendering 3rd Edition},
  year = {2008},
  pages = {1045},
