Sub dokumente aufteilung

--- a/lit.bib
+++ b/lit.bib
@@ -45,3 +45,19 @@
  publisher = {A. K. Peters, Ltd.},
  address = {Natick, MA, USA},
 }
+
+@book{shaker2014procedural,
+  title={Procedural Content Generation In Games},
+  author={Shaker, Noor and Togelius, Julian and Nelson, M},
+  year={2014},
+  publisher={Springer}
+}
+
+@misc{lee2014procedural,
+	title={How Procedural Generation Took Over The Gaming Industry},
+	author={Joel Lee},
+	year={2014},
+	howpublished="\url{http://www.makeuseof.com/tag/procedural-generation-took-gaming-industry/}",
+}
+
+
