--- a/lit.bib
+++ b/lit.bib
@@ -60,4 +60,36 @@
 	howpublished="\url{http://www.makeuseof.com/tag/procedural-generation-took-gaming-industry/}",
 }
 
+@techreport{biedermann2016design_science,
+	title={Design Science, The Design Cycle \& Theoretical Frameworks}, 
+	author={Jonas Biedermann},
+	institution={HSR Hochschule für Technik Rapperswil}, 
+	year={2016},
+}
+
+@misc{gafferon2017games,
+  title={GAFFER ON GAMES},
+  author={Glenn Fiedler},
+  year={2017},
+  howpublished="\url{http://gafferongames.com/}",
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
