Composition Engine Comparison

--- a/lit.bib
+++ b/lit.bib
@@ -72,11 +72,30 @@
   author={Glenn Fiedler},
   year={2017},
   howpublished="\url{http://gafferongames.com/}",
-
 }
 
+@article{lerilli2012cloud_eval_criteria,
+	author={Alessandro Perilli}, 
+	title={Evaluation Criteria for Cloud Management Platforms}, 
+	journal={Gartner}, 
+	year={2012}
+}
 
+@misc{toll2016cloud_expert_eval,
+  title={13 Cloud Experts Reveal the Most Important Factors in Evaluating Cloud Infrastructure as a Service Vendors},
+  author={William Toll},
+  year={2016},
+  howpublished="\url{https://blog.profitbricks.com/selecting-infrastrucutre-as-a-service/}",
+}
 
+@inproceedings{voras2011evaluating,
+  title={Evaluating open-source cloud computing solutions},
+  author={Voras, Ivan and Mihaljevi{\'c}, Branko and Orli{\'c}, Marin and Pletikosa, Marko and {\v{Z}}agar, Mario and Pavi{\'c}, Tomislav and Zimmer, Kristijan and {\v{C}}avrak, Igor and Paunovi{\'c}, Vlatka and Bosni{\'c}, Ivana and others},
+  booktitle={MIPRO, 2011 Proceedings of the 34th International Convention},
+  pages={209--214},
+  year={2011},
+  organization={IEEE}
+}
 
 
 
