In the middle of Composition comparison

--- a/config.tex
+++ b/config.tex
@@ -1,6 +1,7 @@
 \usepackage{color}
 \usepackage[xindy,toc,acronym]{glossaries}
 \usepackage{hyperref}
+\usepackage{tabularx}
 
 \input{glos} 
 \makeglossaries
