--- a/lit.bib
+++ b/lit.bib
@@ -97,6 +97,29 @@
   organization={IEEE}
 }
 
+@misc{roberts2016aws,
+  title={Star Citizen and Squadron 42 Utilize Amazon Lumberyard Game Engine},
+  author={David Swofford},
+  year={2016},
+  howpublished="\url{https://robertsspaceindustries.com/comm-link/press/15660-Star-Citizen-And-Squadron-42-Utilize-Amazon-Lumberyard-Game-Engine}",
+}
+
+@article{pronschinske2015turbine,
+	author={Mitch Pronschinske}, 
+	title={Turbine: A Microservice Approach to Three Billion Game Requests a Day}, 
+	journal={DZone}, 
+	year={2015}
+}
+
+@inproceedings{gai2012towards,
+  title={Towards cloud computing: a literature review on cloud computing and its development trends},
+  author={Gai, Keke and Li, Saier},
+  booktitle={Multimedia Information Networking and Security (MINES), 2012 Fourth International Conference on},
+  pages={142--146},
+  year={2012},
+  organization={IEEE}
+}
+
 
 
 
