--- a/lit.bib
+++ b/lit.bib
@@ -120,6 +120,21 @@
   organization={IEEE}
 }
 
+@misc{cazorla2017db_containers,
+  title={WHY DATABASES ARE NOT FOR CONTAINERS},
+  author={Mikhail Chinkov},
+  year={2017},
+  howpublished="\url{https://myopsblog.wordpress.com/2017/02/06/why-databases-is-not-for-containers/}",
+}
+
+@misc{micronet2017doku,
+  title={MicoNet - Source Code, Examples, and Documentation},
+  author={Jonas Biedermann},
+  year={2017},
+  howpublished="\url{https://github.com/MrHaribo}",
+  
+}
+
 
 
 
