--- a/lit.bib
+++ b/lit.bib
@@ -74,6 +74,12 @@
   howpublished="\url{http://gafferongames.com/}",
 }
 
+@misc{gambetta_fast_paced,
+  title={Fast-Paced Multiplayer},
+  author={Gabriel Gambetta},
+  howpublished="\url{http://www.gabrielgambetta.com/}",
+}
+
 @article{lerilli2012cloud_eval_criteria,
 	author={Alessandro Perilli}, 
 	title={Evaluation Criteria for Cloud Management Platforms}, 
