--- a/config.tex
+++ b/config.tex
@@ -2,6 +2,7 @@
 \usepackage[xindy,toc,acronym]{glossaries}
 \usepackage{hyperref}
 \usepackage{tabularx}
+\usepackage{rotating}
 
 \input{glos} 
 \makeglossaries
