--- a/lit.bib
+++ b/lit.bib
@@ -53,6 +53,13 @@
   publisher={Springer}
 }
 
+@book{wieringa2014design_science,
+  title={Design Science Methodology for Information Systems and Software Engineering},
+  author={Roel J. Wieringa},
+  year={2014},
+  publisher={Springer}
+}
+
 @misc{lee2014procedural,
 	title={How Procedural Generation Took Over The Gaming Industry},
 	author={Joel Lee},
