Started with Results

--- a/config.tex
+++ b/config.tex
@@ -3,6 +3,10 @@
 \usepackage{hyperref}
 \usepackage{tabularx}
 \usepackage{rotating}
+\usepackage{graphicx}
+\usepackage{array}
+\usepackage{lipsum}
+\usepackage{placeins}
 
 \input{glos} 
 \makeglossaries
