Beginning of MicroNet

--- a/config.tex
+++ b/config.tex
@@ -11,6 +11,7 @@
 \input{glos} 
 \makeglossaries
 
+\newcommand{\mn}{MicroNet}
 \newcommand{\ms}{Microservice}
 \newcommand{\mss}{Microservices}
 \newcommand{\og}{Online Game}
