Very rudimentary draft of MicroNet, except Tools

--- a/config.tex
+++ b/config.tex
@@ -7,6 +7,8 @@
 \usepackage{array}
 \usepackage{lipsum}
 \usepackage{placeins}
+\usepackage{listings}
+\usepackage[thinlines]{easytable}
 
 \input{glos} 
 \makeglossaries
@@ -29,3 +31,15 @@
 
 \newcommand{\question}[1]{}
 \renewcommand{\question}[1]{{\color{green} Question for Advisor: {#1}}}
+
+
+\lstdefinelanguage{json}{
+    basicstyle=\normalfont\ttfamily,
+    numbers=left,
+    numberstyle=\scriptsize,
+    stepnumber=1,
+    numbersep=8pt,
+    showstringspaces=false,
+    breaklines=true,
+    frame=lines
+}
