--- a/lit.bib
+++ b/lit.bib
@@ -145,10 +145,14 @@
   author={Jonas Biedermann},
   year={2017},
   howpublished="\url{https://github.com/MrHaribo}",
-  
 }
 
-
+@misc{graham2016distributed_transactions,
+  title={Distributed Transactions: The Icebergs of Microservices},
+  author={Graham Lea},
+  year={2016},
+  howpublished="\url{http://www.grahamlea.com/2016/08/distributed-transactions-microservices-icebergs/}",
+}
 
 
 
