--- a/config.tex
+++ b/config.tex
@@ -9,6 +9,7 @@
 \usepackage{placeins}
 \usepackage{listings}
 \usepackage[thinlines]{easytable}
+\usepackage{enumitem}
 
 \input{glos} 
 \makeglossaries
