Final chapter structure, Finding ongoing

--- a/document.tex
+++ b/document.tex
@@ -14,4 +14,9 @@
 \bibliography{lit}
 \bibliographystyle{alpha}
 
+\appendix
+\input{chapters/appendix/project_plan}
+\input{chapters/appendix/time_report}
+\input{chapters/appendix/personal_report}
+
 \end{document} 
