Korrektur bis Seite 5

--- a/lit.bib
+++ b/lit.bib
@@ -1,3 +1,10 @@
+@article{zimmermann2016microservices,
+  title={Microservices Tenets: Agile Approach to Service Development and Deployment},
+  author={Zimmermann, O},
+  journal={Computer Science-Research and Development, Springer (to appear)},
+  year={2016}
+}
+
 @book{millett2015patterns,
   title={Patterns, Principles and Practices of Domain-Driven Design},
   author={Millett, Scott},
@@ -154,16 +161,67 @@
   howpublished="\url{http://www.grahamlea.com/2016/08/distributed-transactions-microservices-icebergs/}",
 }
 
+@inproceedings{di2017research,
+  title={Research on Architecting Microservices: Trends, Focus, and Potential for Industrial Adoption},
+  author={Di Francesco, Paolo and Malavolta, Ivano and Lago, Patricia},
+  booktitle={Software Architecture (ICSA), 2017 IEEE International Conference on},
+  pages={21--30},
+  year={2017},
+  organization={IEEE}
+}
 
+@article{bosch2017towards,
+  title={Towards Evidence-Based Organizations: Learnings From Embedded Systems, Online Games And Internet of Things},
+  author={Bosch, Jan and Olsson, Helena},
+  journal={IEEE Software},
+  year={2017},
+  publisher={IEEE}
+}
 
+@book{smed2017algorithms,
+  title={Algorithms and networking for computer games},
+  author={Smed, Jouni and Hakonen, Harri},
+  year={2017},
+  publisher={John Wiley \& Sons}
+}
 
+@misc{liu2017apparatus,
+  title={Apparatus and method to play a multiplayer, online game},
+  author={Liu, Lei and Gregory, L Sylvester II},
+  year={2017},
+  month=mar # "~28",
+  publisher={Google Patents},
+  note={US Patent 9,604,146}
+}
 
+@book{josuttis2007soa,
+  title={SOA in Practice},
+  author={Nicolai M. Josuttis},
+  year={2007},
+  publisher={O'Reilly Media, Inc.}
+}
 
+@misc{rajeev2016ms_popular,
+  title={5 Reasons why Microservices have become so popular in the last 2 years},
+  author={Rajeev Sakhuja},
+  year={2016},
+  howpublished="\url{https://www.linkedin.com/pulse/5-reasons-why-microservices-have-become-so-popular-last-sakhuja}",
+}
 
+@inproceedings{pneuli1990distributed,
+  title={Distributed reactive systems are hard to synthesize},
+  author={Pneuli, Amir and Rosner, Roni},
+  booktitle={Foundations of Computer Science, 1990. Proceedings., 31st Annual Symposium on},
+  pages={746--757},
+  year={1990},
+  organization={IEEE}
+}
 
-
-
-
-
-
-
+@inproceedings{kupermann2001synthesizing,
+  title={Synthesizing distributed systems},
+  author={Kupermann, O and Varfi, MY},
+  booktitle={Logic in Computer Science, 2001. Proceedings. 16th Annual IEEE Symposium on},
+  pages={389--398},
+  year={2001},
+  organization={IEEE}
+}
