Chapter 2 Methods done...

--- a/config.tex
+++ b/config.tex
@@ -10,6 +10,7 @@
 \usepackage{listings}
 \usepackage[thinlines]{easytable}
 \usepackage{enumitem}
+\usepackage{longtable}
 
 \input{glos} 
 \makeglossaries
