--- a/document.tex
+++ b/document.tex
@@ -6,6 +6,8 @@
 
 \begin{document}
 
+%\tableofcontents
+
 \input{chapters/introduction/introduction}
 \input{chapters/methods/methods}
 \input{chapters/results/results}
