--- a/config.tex
+++ b/config.tex
@@ -11,6 +11,7 @@
 \usepackage[thinlines]{easytable}
 \usepackage{enumitem}
 \usepackage{longtable}
+\usepackage{wrapfig}
 
 \input{glos} 
 \makeglossaries
