Before Session mgmt correction

--- a/lit.bib
+++ b/lit.bib
@@ -225,3 +225,30 @@
   year={2001},
   organization={IEEE}
 }
+
+@inproceedings{zhang2011transaction,
+  title={Transaction models for massively multiplayer online games},
+  author={Zhang, Kaiwen and Kemme, Bettina},
+  booktitle={Reliable Distributed Systems (SRDS), 2011 30th IEEE Symposium on},
+  pages={31--40},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{zhang2008persistence,
+  title={Persistence in massively multiplayer online games},
+  author={Zhang, Kaiwen and Kemme, Bettina and Denault, Alexandre},
+  booktitle={Proceedings of the 7th ACM SIGCOMM Workshop on Network and System Support for Games},
+  pages={53--58},
+  year={2008},
+  organization={ACM}
+}
+
+@inproceedings{pardon2014atomic,
+  title={Atomic distributed transactions: a RESTful design},
+  author={Pardon, Guy and Pautasso, Cesare},
+  booktitle={Proceedings of the 23rd International Conference on World Wide Web},
+  pages={943--948},
+  year={2014},
+  organization={ACM}
+}
