Before conclusions drawn by results

--- a/lit.bib
+++ b/lit.bib
@@ -252,3 +252,30 @@
   year={2014},
   organization={ACM}
 }
+
+@inproceedings{wada2011data,
+  title={Data Consistency Properties and the Trade-offs in Commercial Cloud Storage: the Consumers' Perspective.},
+  author={Wada, Hiroshi and Fekete, Alan and Zhao, Liang and Lee, Kevin and Liu, Anna},
+  booktitle={CIDR},
+  volume={11},
+  pages={134--143},
+  year={2011}
+}
+
+@techreport{olston2000offering,
+  title={Offering a precision-performance tradeoff for aggregation queries over replicated data},
+  author={Olston, Chris and Widom, Jennifer},
+  year={2000},
+  institution={Stanford}
+}
+
+@article{franklin1997transactional,
+  title={Transactional client-server cache consistency: Alternatives and performance},
+  author={Franklin, Michael J and Carey, Michael J and Livny, Miron},
+  journal={ACM Transactions on Database Systems (TODS)},
+  volume={22},
+  number={3},
+  pages={315--363},
+  year={1997},
+  publisher={ACM}
+}
