--- a/config.tex
+++ b/config.tex
@@ -1,6 +1,6 @@
 \usepackage{color}
-\usepackage[xindy,toc,acronym]{glossaries}
 \usepackage{hyperref}
+\usepackage[automake]{glossaries}
 \usepackage{tabularx}
 \usepackage{rotating}
 \usepackage{graphicx}
@@ -16,10 +16,7 @@
 \usepackage{longtable}
 \usepackage{wrapfig}
 
-\input{glos} 
-\makeglossaries
-
-\newcommand{\mn}{MicroNet}
+\newcommand{\mn}{MicroNet} 
 \newcommand{\ms}{Microservice}
 \newcommand{\mss}{Microservices}
 \newcommand{\og}{Online Game}
