Korrektur Leo until 2.2.8

--- a/glos.tex
+++ b/glos.tex
@@ -1,12 +1,21 @@
 % Term definitions
 
 \newacronym{mmo}{MMO}{Massive Multiplayer \og{}}
-
 \newacronym{moba}{MOBA}{Multiplayer Online Battle Arena}
-
 \newacronym{hsr}{HSR}{Hochschule f\"ur Technik Rapperswil}
-
 \newacronym{soa}{SOA}{Service-Oriented Architecture}
+\newacronym{json}{Json}{Javascript Object Notation}
+\newacronym{xml}{XML}{Extensible Markup Language}
+\newacronym{cvs}{CVS}{Comma Separated Values}
+\newacronym{html}{HTML}{Hypertext Markup Language}
+\newacronym{http}{HTTP}{Hypertext Transfer Protocol}
+\newacronym{pcg}{PCG}{Procedural Content Generation}
+\newacronym{dry}{DRY}{Don't Repeat Yourself}
+\newacronym{ide}{IDE}{Integrated development environment}
+\newacronym{api}{API}{Application Programming Interface}
+\newacronym{ui}{UI}{User Interface}
+\newacronym{uri}{URI}{Uniform Resource Identifier}
+\newacronym{ddd}{DDD}{Domain Driven Design}
 
 \newglossaryentry{aaa}{name=AAA, description={
 Triple A (AAA) is a designation of large games or large game development
@@ -18,3 +27,6 @@ description={Independent game development companies.}}
 \newglossaryentry{sprite}{name={sprite},
 description={2D representation of game objects. Sprites are 2D textures and
 can optionally be animated.}}
+
+
+
