--- a/lit.bib
+++ b/lit.bib
@@ -74,6 +74,20 @@
 	howpublished="\url{http://www.makeuseof.com/tag/procedural-generation-took-gaming-industry/}",
 }
 
+@techreport{biedermann2015project1,
+	title={Microservices and Network Games}, 
+	author={Jonas Biedermann},
+	institution={HSR Hochschule für Technik Rapperswil}, 
+	year={2015},
+}
+
+@techreport{biedermann2016project2,
+	title={Network Game Features and Microservices}, 
+	author={Jonas Biedermann},
+	institution={HSR Hochschule für Technik Rapperswil}, 
+	year={2016},
+}
+
 @techreport{biedermann2016design_science,
 	title={Design Science, The Design Cycle \& Theoretical Frameworks}, 
 	author={Jonas Biedermann},
@@ -279,3 +293,5 @@
   year={1997},
   publisher={ACM}
 }
+
+
