next is MicroNet Description

--- a/glos.tex
+++ b/glos.tex
@@ -11,7 +11,7 @@
 \newacronym{http}{HTTP}{Hypertext Transfer Protocol}
 \newacronym{pcg}{PCG}{Procedural Content Generation}
 \newacronym{dry}{DRY}{Don't Repeat Yourself}
-\newacronym{ide}{IDE}{Integrated development environment}
+\newacronym{ide}{IDE}{Integrated Development Environment}
 \newacronym{api}{API}{Application Programming Interface}
 \newacronym{ui}{UI}{User Interface}
 \newacronym{uri}{URI}{Uniform Resource Identifier}
