Up to Chapter 4 Conclusions

--- a/glos.tex
+++ b/glos.tex
@@ -16,6 +16,8 @@
 \newacronym{ui}{UI}{User Interface}
 \newacronym{uri}{URI}{Uniform Resource Identifier}
 \newacronym{ddd}{DDD}{Domain Driven Design}
+\newacronym{ast}{AST}{Abstract Syntax Tree}
+\newacronym{jvm}{JVM}{Java Virtual Machine}
 
 \newglossaryentry{aaa}{name=AAA, description={
 Triple A (AAA) is a designation of large games or large game development
