--- a/lit.bib
+++ b/lit.bib
@@ -294,4 +294,29 @@
   publisher={ACM}
 }
 
+@inproceedings{sun2015security,
+  title={Security-as-a-service for microservices-based cloud applications},
+  author={Sun, Yuqiong and Nanda, Susanta and Jaeger, Trent},
+  booktitle={Cloud Computing Technology and Science (CloudCom), 2015 IEEE 7th International Conference on},
+  pages={50--57},
+  year={2015},
+  organization={IEEE}
+}
 
+@misc{shieh2015methods,
+  title={Methods and systems for providing security to distributed microservices},
+  author={Shieh, Choung-Yaw Michael and Woolward, Marc},
+  year={2015},
+  month=mar # "~13",
+  publisher={Google Patents},
+  note={US Patent App. 14/657,282}
+}
+
+@inproceedings{thanh2016embedding,
+  title={Embedding security and privacy into the development and operation of cloud applications and services},
+  author={Thanh, Tran Quang and Covaci, Stefan and Magedanz, Thomas and Gouvas, Panagiotis and Zafeiropoulos, Anastasios},
+  booktitle={Telecommunications Network Strategy and Planning Symposium (Networks), 2016 17th International},
+  pages={31--36},
+  year={2016},
+  organization={IEEE}
+}
