--- a/glos.tex
+++ b/glos.tex
@@ -18,6 +18,8 @@
 \newacronym{ddd}{DDD}{Domain Driven Design}
 \newacronym{ast}{AST}{Abstract Syntax Tree}
 \newacronym{jvm}{JVM}{Java Virtual Machine}
+\newacronym{tar}{TAR}{Technical Action Research}
+\newacronym{lan}{LAN}{Local Area Network}
 
 \newglossaryentry{aaa}{name=AAA, description={
 Triple A (AAA) is a designation of large games or large game development
