--- a/MasterThesisReport.tex
+++ b/MasterThesisReport.tex
@@ -4,10 +4,23 @@
 
 \include{config} 
 
+\usepackage{authblk}
+
 \input{glos} 
 \makeglossaries 
 
 \begin{document}
+ 
+\title{Microservices and Online Games}
+\subtitle{Composition, Deployment and Development Concepts}
+\author{Jonas Biedermann}
+\affil{\vspace{1.5cm}\small{HSR - Hochschule für Technik Rapperswil}}
+\affil{\small{Advisor: Olaf Zimmermann}}
+\date{01.08.2017}
+\maketitle
+
+\input{abstract}
+ 
  
 \tableofcontents 
 
