Corrections of Olaf Chapter 1

--- a/config.tex
+++ b/config.tex
@@ -24,6 +24,9 @@
 
 \newcommand{\code}[1]{\texttt{#1}}
 
+\renewcommand*{\subsectionautorefname}{Subsection}
+\renewcommand*{\subsubsectionautorefname}{Subsubsection}
+
 %% \todo{} command.
 %
 % Outputs red TODOs in the document. Requires \usepackage{color}.
