--- a/glos.tex
+++ b/glos.tex
@@ -20,6 +20,8 @@
 \newacronym{jvm}{JVM}{Java Virtual Machine}
 \newacronym{tar}{TAR}{Technical Action Research}
 \newacronym{lan}{LAN}{Local Area Network}
+\newacronym{dsm}{DSM}{Design Science Methodology}
+\newacronym{paas}{PAAS}{Platform as a Service}
 
 \newglossaryentry{aaa}{name=AAA, description={
 Triple A (AAA) is a designation of large games or large game development
