--- a/lit.bib
+++ b/lit.bib
@@ -320,3 +320,151 @@
   year={2016},
   organization={IEEE}
 }
+
+@article{ogradly2017soaVSms,
+	author={Stephen O'Grady}, 
+	title={The Difference Between SOA and Microservices Isn’t Size}, 
+	journal={RedMonk}, 
+	month={July},
+	year={2017}
+}
+
+@article{little2017soaVSms,
+	author={Mark Little}, 
+	title={The Difference between SOA and Microservices?}, 
+	journal={InfoQ}, 
+	month={July},
+	year={2017}
+}
+
+@article{little2015soaVSms,
+	author={Mark Little}, 
+	title={SOA versus Microservices?}, 
+	journal={InfoQ}, 
+	month={December},
+	year={2015}
+}
+
+@article{north2015mss,
+	author={Dan North}, 
+	title={Microservices: Software that Fits in Your Head}, 
+	journal={InfoQ}, 
+	month={August},
+	year={2015}
+}
+
+@article{stenberg2014mss,
+	author={Jan Stenberg}, 
+	title={Microservices: Usage Is More Important than Size}, 
+	journal={InfoQ}, 
+	month={May},
+	year={2014}
+}
+
+@article{richardson2014mss,
+	author={Chris Richardson}, 
+	title={Microservices: Decomposing Applications for Deployability and Scalability}, 
+	journal={InfoQ}, 
+	month={May},
+	year={2014}
+}
+
+@article{varjoinen2014orchestrationVSchoreography,
+	author={Antti Varjoinen}, 
+	title={Orchestration vs. choreography}, 
+	journal={Medium}, 
+	month={October},
+	year={2015}
+}
+
+@article{lublinsky2008orchestrationVSchoreography,
+	author={Boris Lublinsky}, 
+	title={Orchestration vs. Choreography: Debate Over Definitions}, 
+	journal={InfoQ}, 
+	month={September},
+	year={2008}
+}
+
+@article{cohen2015orchestration,
+	author={Uri Cohen}, 
+	title={Docker...Containers, Microservices and Orchestrating the Whole Symphony}, 
+	journal={DZone}, 
+	month={January},
+	year={2015}
+}
+
+@article{millidge2015choreography,
+	author={Steve Millidge}, 
+	title={Microservice Choreography with the Payara Micro Clustered CDI Event Bus}, 
+	journal={DZone}, 
+	month={December},
+	year={2009}
+}
+
+@article{vilas2016choreography,
+	author={Francisco Méndez Vilas}, 
+	title={Asynchronous APIs in Choreographed Microservices}, 
+	journal={NORDIC APIS}, 
+	month={October},
+	year={2016}
+}
+
+@booklet{jellema2017choreography, 
+	author = {Lucas Jellema}, 
+	howpublished = {Oracle Code, April 20th 2017, London, UK},
+	title = {Event Bus as Backbone for Decoupled Microservice Choreography}, 
+	year = {2017},
+	month = {April}
+}
+
+@booklet{anderson2017teams, 
+	author = {Patricia Anderson, Micah Blalock, Jason Goth}, 
+	howpublished = {InfoQ},
+	title = {Microservices: Organizing Large Teams for Rapid Delivery}, 
+	year = {2017},
+	month = {January}
+}
+
+@misc{bolas2013games_dev_windows,
+	author = {Nicol Bolas}, 
+	howpublished="\url{https://softwareengineering.stackexchange.com/questions/60544/why-do-game-developers-prefer-windows}",
+	title = {Why do game developers prefer Windows?}, 
+	year = {2013},
+	month = {March}
+}
+
+@article{lawton2008developing,
+  title={Developing software online with platform-as-a-service technology},
+  author={Lawton, George},
+  journal={Computer},
+  volume={41},
+  number={6},
+  year={2008},
+  publisher={IEEE}
+}
+
+@inproceedings{buyya2009modeling,
+  title={Modeling and simulation of scalable Cloud computing environments and the CloudSim toolkit: Challenges and opportunities},
+  author={Buyya, Rajkumar and Ranjan, Rajiv and Calheiros, Rodrigo N},
+  booktitle={High Performance Computing \& Simulation, 2009. HPCS'09. International Conference on},
+  pages={1--11},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{oberhauser2016microflows,
+  title={Microflows: Lightweight automated planning and enactment of workflows comprising semantically-annotated microservices},
+  author={Oberhauser, Roy},
+  booktitle={Proceedings of the Sixth International Symposium on Business Modeling and Software Design (BMSD 2016)},
+  year={2016},
+  pages={134--143}
+}
+
+@inproceedings{rotter2017telecom,
+  title={Telecom strategies for service discovery in microservice environments},
+  author={Rotter, Csaba and Ill{\'e}s, J{\'a}nos and Ny{\'\i}ri, G{\'a}bor and Farkas, L{\'o}r{\'a}nt and Csat{\'a}ri, Gergely and Huszty, Gerg{\H{o}}},
+  booktitle={Innovations in Clouds, Internet and Networks (ICIN), 2017 20th Conference on},
+  pages={214--218},
+  year={2017},
+  organization={IEEE}
+}
