Cloud Service Providers

--- a/lit.bib
+++ b/lit.bib
@@ -468,3 +468,11 @@
   year={2017},
   organization={IEEE}
 }
+
+@article{harvey2017cloud_providers,
+	author={Cynthia Harvey}, 
+	title={Public Cloud Computing Providers}, 
+	journal={Datamotion}, 
+	month={April},
+	year={2017}
+}
