It has to be mentioned weg

--- a/lit.bib
+++ b/lit.bib
@@ -476,3 +476,10 @@
 	month={April},
 	year={2017}
 }
+
+@article{richardson2017apigateway,
+	author={Chris Richardson}, 
+	title={Pattern: API Gateway / Backend for Front-End}, 
+	journal={microservices.io}, 
+	year={2017}
+}
