Ab Setite 80 jetzt

--- a/lit.bib
+++ b/lit.bib
@@ -483,3 +483,10 @@
 	journal={microservices.io}, 
 	year={2017}
 }
+
+@misc{fowler2003-2016ddd,
+	author={Martin Fowler},
+	howpublished="\url{https://martinfowler.com/tags/domain%20driven%20design.html}",
+	title = {domain driven design}, 
+	year = {2003-2016},
+}
