--- a/lit.bib
+++ b/lit.bib
@@ -490,3 +490,14 @@
 	title = {domain driven design}, 
 	year = {2003-2016},
 }
+
+@article{zimmermann2017architectural,
+  title={Architectural refactoring for the cloud: a decision-centric view on cloud migration},
+  author={Zimmermann, Olaf},
+  journal={Computing},
+  volume={99},
+  number={2},
+  pages={129--145},
+  year={2017},
+  publisher={Springer}
+}
