Questions for Practitioners changes

--- a/glos.tex
+++ b/glos.tex
@@ -22,6 +22,9 @@
 \newacronym{lan}{LAN}{Local Area Network}
 \newacronym{dsm}{DSM}{Design Science Methodology}
 \newacronym{paas}{PAAS}{Platform as a Service}
+\newacronym{aws}{AWS}{Amazon Web Services}
+\newacronym{gcp}{GCP}{Google Cloud Platform}
+\newacronym{cas}{CAS}{Check and Set}
 
 \newglossaryentry{aaa}{name=AAA, description={
 Triple A (AAA) is a designation of large games or large game development
