--- a/lit.bib
+++ b/lit.bib
@@ -1,8 +1,16 @@
 @article{zimmermann2016microservices,
-  title={Microservices Tenets: Agile Approach to Service Development and Deployment},
-  author={Zimmermann, O},
-  journal={Computer Science-Research and Development, Springer (to appear)},
-  year={2016}
+  author    = {Olaf Zimmermann},
+  title     = {Microservices tenets},
+  journal   = {Computer Science - R{\&}D},
+  volume    = {32},
+  number    = {3-4},
+  pages     = {301--310},
+  year      = {2017},
+  url       = {https://doi.org/10.1007/s00450-016-0337-0},
+  doi       = {10.1007/s00450-016-0337-0},
+  timestamp = {Tue, 04 Jul 2017 17:27:30 +0200},
+  biburl    = {http://dblp.dagstuhl.de/rec/bib/journals/ife/Zimmermann17},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @book{millett2015patterns,
@@ -18,8 +26,6 @@
   school={Universität Stuttgart},
   year={2015}
 }
-
-
 
 @misc{earnshaw2013devops,
   title={Cloud computing patterns: identification, design, and application},
@@ -74,24 +80,24 @@
 	howpublished="\url{http://www.makeuseof.com/tag/procedural-generation-took-gaming-industry/}",
 }
 
-@techreport{biedermann2015project1,
+@misc{biedermann2015project1,
 	title={Microservices and Network Games}, 
 	author={Jonas Biedermann},
-	institution={HSR Hochschule für Technik Rapperswil}, 
+	note={HSR Hochschule für Technik Rapperswil, Seminar Report (available upon request)},
 	year={2015},
 }
 
-@techreport{biedermann2016project2,
+@misc{biedermann2016project2,
 	title={Network Game Features and Microservices}, 
 	author={Jonas Biedermann},
-	institution={HSR Hochschule für Technik Rapperswil}, 
+	note={HSR Hochschule für Technik Rapperswil, Seminar Report (available upon request)},
 	year={2016},
 }
 
-@techreport{biedermann2016design_science,
+@misc{biedermann2016design_science,
 	title={Design Science, The Design Cycle \& Theoretical Frameworks}, 
 	author={Jonas Biedermann},
-	institution={HSR Hochschule für Technik Rapperswil}, 
+	note={HSR Hochschule für Technik Rapperswil, Seminar Report (available upon request)},
 	year={2016},
 }
 
@@ -500,4 +506,11 @@
   pages={129--145},
   year={2017},
   publisher={Springer}
+}
+
+@misc{containers2016survey,
+	author={DevOps, ClusterHQ},
+	howpublished="\url{https://clusterhq.com/assets/pdfs/state-of-container-usage-june-2016.pdf}",
+	title = {Container Market Adoption Survey}, 
+	year = {2016},
 }
