--- a/glos.tex
+++ b/glos.tex
@@ -25,6 +25,7 @@
 \newacronym{aws}{AWS}{Amazon Web Services}
 \newacronym{gcp}{GCP}{Google Cloud Platform}
 \newacronym{cas}{CAS}{Check and Set}
+\newacronym{fsm}{FSM}{Finite State Machine}
 
 \newglossaryentry{aaa}{name=AAA, description={
 Triple A (AAA) is a designation of large games or large game development
