Time Report & Architecture Layers refactored

--- a/config.tex
+++ b/config.tex
@@ -10,6 +10,7 @@
 \usepackage{listings}
 \usepackage[T1]{fontenc}
 \usepackage{inconsolata}
+\usepackage{float}
 
 \usepackage[thinlines]{easytable}
 \usepackage{enumitem}
