--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,16 @@
 \section*{Abstract}
+
+Rich \ogs{} allow thousands of player to simultaneously play together in a
+persistent game world. However realizing such rich \ogs{} can be very
+challenging since it forces the developer to design a distributed application
+architecture to support the game. \mss{} are a modern approach to design
+business applications in a distributed and therefore cloud-friendly way but
+little research exists on how to apply \ms{} principles to the game domain. This
+thesis introduces an overall concept on how to develop a rich \og{} using a
+\ms{} application design and especially on how to deal with distribution topics
+like \ms{} composition, application deployment, or data consistency. These
+research subjects are examined using \gls{dsm} techniques leading to theoretical
+findings which are backed by a fully functional prototype as a practical
+reference implementation on how to approach \og{} development with \mss{}. The
+concepts and prototypes developed during this thesis aim at simplifying \og{}
+development and making it more accessible to inexperienced game developers.
