mss og case finally made consistent, what a pain

--- a/config.tex
+++ b/config.tex
@@ -11,6 +11,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{inconsolata}
 \usepackage{float}
+\usepackage{mfirstuc}
 
 \usepackage[thinlines]{easytable}
 \usepackage{enumitem}
@@ -18,10 +19,16 @@
 \usepackage{wrapfig}
 
 \newcommand{\mn}{MicroNet} 
-\newcommand{\ms}{Microservice}
-\newcommand{\mss}{Microservices}
-\newcommand{\og}{Online Game}
-\newcommand{\ogs}{Online Games}
+\newcommand{\ms}{microservice}
+\newcommand{\mss}{microservices}
+\newcommand{\msuc}{Microservice}
+\newcommand{\mssuc}{Microservices}
+\newcommand{\og}{online game}
+\newcommand{\ogs}{online games}
+\newcommand{\oguc}{Online game}
+\newcommand{\ogsuc}{Online games}
+\newcommand{\ogucuc}{Online Game}
+\newcommand{\ogsucuc}{Online Games}
 
 \newcommand{\code}[1]{\texttt{#1}}
 
