--- a/glos.tex
+++ b/glos.tex
@@ -1,6 +1,6 @@
 % Term definitions
 
-\newacronym{mmo}{MMO}{Massive Multiplayer \og{}}
+\newacronym{mmo}{MMO}{Massive Multiplayer \ogucuc{}}
 \newacronym{moba}{MOBA}{Multiplayer Online Battle Arena}
 \newacronym{hsr}{HSR}{Hochschule f\"ur Technik Rapperswil}
 \newacronym{soa}{SOA}{Service-Oriented Architecture}
