--- a/abstract.tex
+++ b/abstract.tex
@@ -1,16 +1,26 @@
 \section*{Abstract}
 
-Rich \ogs{} allow thousands of player to simultaneously play together in a
-persistent game world. However realizing such rich \ogs{} can be very
-challenging since it forces the developer to design a distributed application
-architecture to support the game. \mss{} are a modern approach to design
-business applications in a distributed and therefore cloud-friendly way but
-little research exists on how to apply \ms{} principles to the game domain. This
-thesis introduces an overall concept on how to develop a rich \og{} using a
-\ms{} application design and especially on how to deal with distribution topics
-like \ms{} composition, application deployment, or data consistency. These
-research subjects are examined using \gls{dsm} techniques leading to theoretical
-findings which are backed by a fully functional prototype as a practical
-reference implementation on how to approach \og{} development with \mss{}. The
-concepts and prototypes developed during this thesis aim at simplifying \og{}
-development and making it more accessible to inexperienced game developers.
+Rich \ogs{} allow thousands of players to participate in persistent game worlds
+simultaneously. 
+
+
+Realizing such rich \ogs{} is challenging because their developers are forced
+to design distributed application architectures.
+
+\mssuc{} are a modern approach to designing business applications in a
+distributed and cloud-friendly way; little research exists on how to apply \ms{}
+principles to the game domain.
+
+This thesis introduces an overall approach how to develop a rich \og{} using a
+\ms{} application design; essential distribution topics such as \ms{}
+composition, application deployment, or data consistency are investigated in
+depth.
+
+These research subjects are investigated with the help of \gls{dsm}
+techniques that lead to theoretical findings backed by a fully
+functional open source prototype that acts as a practical reference
+implementation demonstrating how to approach \og{} development with \mss{}.
+
+The concepts and prototypes developed during this thesis aim at simplifying
+\og{} development and making this field more accessible to inexperienced game
+developers.
