--- a/abstract.tex
+++ b/abstract.tex
@@ -1,26 +1,17 @@
 \section*{Abstract}
 
 Rich \ogs{} allow thousands of players to participate in persistent game worlds
-simultaneously. 
-
-
-Realizing such rich \ogs{} is challenging because their developers are forced
-to design distributed application architectures.
-
-\mssuc{} are a modern approach to designing business applications in a
-distributed and cloud-friendly way; little research exists on how to apply \ms{}
-principles to the game domain.
-
-This thesis introduces an overall approach how to develop a rich \og{} using a
-\ms{} application design; essential distribution topics such as \ms{}
-composition, application deployment, or data consistency are investigated in
-depth.
-
-These research subjects are investigated with the help of \gls{dsm}
-techniques that lead to theoretical findings backed by a fully
+simultaneously. Realizing such rich \ogs{} is challenging because their
+developers are forced to design distributed application architectures. \mssuc{}
+are a modern approach to designing business applications in a distributed and
+cloud-friendly way; little research exists on how to apply \ms{} principles to
+the game domain. This thesis introduces an overall approach how to develop a
+rich \og{} using a \ms{} application design; essential distribution topics such
+as \ms{} composition, application deployment, or data consistency are
+investigated in depth. These research subjects are investigated with the help of
+\gls{dsm} techniques that lead to theoretical findings backed by a fully
 functional open source prototype that acts as a practical reference
-implementation demonstrating how to approach \og{} development with \mss{}.
-
-The concepts and prototypes developed during this thesis aim at simplifying
-\og{} development and making this field more accessible to inexperienced game
-developers.
+implementation demonstrating how to approach \og{} development with \mss{}. The
+concepts and prototypes developed during this thesis aim at simplifying \og{}
+development and making this field more accessible to inexperienced game
+developers. 
