--- a/glos.tex
+++ b/glos.tex
@@ -15,7 +15,7 @@
 \newacronym{api}{API}{Application Programming Interface}
 \newacronym{ui}{UI}{User Interface}
 \newacronym{uri}{URI}{Uniform Resource Identifier}
-\newacronym{ddd}{DDD}{Domain Driven Design}
+\newacronym{ddd}{DDD}{Domain-Driven Design}
 \newacronym{ast}{AST}{Abstract Syntax Tree}
 \newacronym{jvm}{JVM}{Java Virtual Machine}
 \newacronym{tar}{TAR}{Technical Action Research}
