Statistical Stuff is inside

--- a/MasterThesisReport.tex
+++ b/MasterThesisReport.tex
@@ -41,6 +41,7 @@
 \listoffigures
 
 \appendix
+\input{chapters/appendix/statistical_results}
 \input{chapters/appendix/project_plan}
 \input{chapters/appendix/time_report}
 \input{chapters/appendix/personal_report}
