Ich mach jetzt Schluss

--- a/glos.tex
+++ b/glos.tex
@@ -22,6 +22,7 @@
 \newacronym{lan}{LAN}{Local Area Network}
 \newacronym{dsm}{DSM}{Design Science Methodology}
 \newacronym{paas}{PAAS}{Platform as a Service}
+\newacronym{iaas}{IAAS}{Infrastructure as a Service}
 \newacronym{aws}{AWS}{Amazon Web Services}
 \newacronym{gcp}{GCP}{Google Cloud Platform}
 \newacronym{cas}{CAS}{Check and Set}
